<resources>
    <string name="app_name">MiniERP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_articulos">Articulos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_facventas">Facturas de venta</string>
    <string name="menu_faccompra">Facturas de compra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="precio">Precio: %.2f €</string>
    <string name="stock"> Stock: %d </string>
    <string name="nombre"> ID: %s </string>
    <string name="descripcion"> Comentario: %s </string>
    <string name="id"> ID: %s </string>
    <string name="nif"> NIF: %s </string>
    <string name="Importe">Importe: %.2f €</string>
    <string name="Cantidad"> Cantidad: %d </string>
</resources>